Bug fix: Close button on shortcut key help toolbar has unwanted white border in Dark Mode
(issue #303)

--- a/wx-src/pages/keyboardPaste.css
+++ b/wx-src/pages/keyboardPaste.css
@@ -173,6 +173,11 @@ body {
     background-color: var(--color-toolbarbtn-close-active-bkgd);
 }
 
+/* Used for the Close button on the shortcut key help toolbar. */
+button.browser-style:focus:not(:disabled) {
+    border-color: var(--color-bkgd) !important;
+}
+
 #shortcut-list-content {
     margin-left: -16px;
     margin-right: -16px;
